grassfeeder (0.1.8) bionic; urgency=low

   * downgrade: no more formatted opml output, only simple line break. Due to compile issue on xmlem
   
  - create new subscription --> don't jump the complete tree
  
  - bug:   msg map empty,  at window-restore without selected source
  
  - TO DO  debian package for distribution

 -- Marcus der Schlegler <schleglermarcus@posteo.de>  Sat, 04 Feb 2023 00:20:00 +0000

grassfeeder (0.1.7) bionic; urgency=low

  * Msg List Favorite+IsRead column sortable
  * Charset Additions, Downloader Threads to 9
  * Tab switch indicator: fade time shorter
  * Bugfix: added slash when dragging www.phoronix.com

 -- Marcus der Schlegler <schleglermarcus@posteo.de>  Sat, 04 Feb 2023 00:20:00 +0000

grassfeeder (0.1.6) bionic; urgency=low

  * Messages-DB: adding marker column on startup
  * Added message favorite display
  * Bugfix: Spinner Indicator on Drag Url Dialog not working
  * Bugfix: Dragging an url twice did not work: now deleting input fields on cancel.
  * Bugfix: Db cleanup shall not result in unnecessary tree update
  * Bugfix: Reduced tree position jump on subscription move

 -- Marcus der Schlegler <schleglermarcus@posteo.de>  Mon, 02 Jan 2023 00:03:00 +0000

grassfeeder (0.1.5) bionic; urgency=low

  * Focus indicator for browser area: move down
  * After deleting Message, set Cursor to next one
  * Refactored SourceTreeController,  message_from_modelentry
  * Bugfix: Focus on Folder, Minimize, Restore results in list content out of sync, no browser
  * Bugfix: insert subscription by drag, set-read on messages, tree is not updated

 -- Marcus der Schlegler <schleglermarcus@posteo.de>  Thu, 13 Dec 2022 00:10:00 +0000

grassfeeder (0.1.4) bionic; urgency=low

  * Feed Error display sorted by time
  * Error DB: limit entries by time, subscription
  * Created debian updating repository
  * Improved drag url recognition: www.netjstech.com
  * Create gzipped changelog, added it to *.deb file
  * rust-i18n update, yaml adapted