@@ -6,21 +6,14 @@ members = [
   "ui_gtk",
   "fr_gtk",
   "fr_core",
-  "testing",
 ]
+
 exclude = [
+  "testing",
   "app-g3sources",
   "app-gtk3-linux",
   "app-gtk3-debian",
-  "dd-g3new",
-  "dd-g3old",
 ]
 
-
-
-# Specifying a workspace dependency is similar to package dependencies except:
-#    Dependencies from this table cannot be declared as optional
-#    features declared in this table are additive with the features from [dependencies]
-#[workspace.dependencies]
-#dd = { path = "../dd-g3new" }
-# dd = { path = "../app-g3sources" }
+## The testing module shall not be at members.
+## If it ere there, the UI module is linked with it, but the tests shall run without the UI module.
