@@ -1,102 +1,0 @@
-[package]
-name = "app-g3sources"
-version = "0.1.0"
-edition = "2021"
-description = "Legacy Sources of old versions for debian build"
-
-[dependencies]
-feed-rs = { version = "1.3.0", path = "target/feed-rs-1.3.0/feed-rs" } 
-flume = { version = "0.10.14", path = "target/flume-master" }
-ureq = { path = "target/ureq-2.6.2" }                         #  , optional = true 
-ico = { path = "target/rust-ico-0.3.0" }
-image = { path = "target/image-0.24.0" }
-
-
-syslog = ">=6.0.1"
-chrono = ">=0.4.19"
-# gumdrop = ">=0.8.1"	#  the debian packages only have 0.7.0
-gumdrop = ">=0.7.0"
-# log = ">=0.4.14"	# the debian packages only have 0.4.11
-log = ">=0.4.11"
-# once_cell = ">=1.12.0"	# the debian packages only have 1.9.0
-once_cell = ">=1.9.0"
-# xdg = ">=2.4.1"		# the debian packages only have 2.2.0-3
-xdg = ">=2.2"
-serde = { version = ">=1.0.130" } 
-serde_json = { version = ">=1.0.45" } 
-gdk-pixbuf = "=0.14.0"
-gio = "=0.14.8"
-glib  = "=0.14.8"
-fern = { version = ">=0.6", features = ["colored", "chrono"] }
-
-
-##  cannot be found as debian package or too old
-lz4-compression = { path = "target/lz4-compression-0.7" }
-az = { path = "target/az-v1.1.0" }
-rust-i18n = { path = "target/rust-i18n-1.1.1" }
-quick-xml = { path = "target/quick-xml-0.27.1", features = ["encoding"] }
-regex = { path = "target/regex-1.6.0" }
-url = { path = "target/rust-url-2.3.0/url" }
-uuid = { path = "target/uuid-1.1.0", features = ["v4"] }
-nanorand = { path = "target/nanorand-rs-0.7.0", features = [
-  "getrandom",
-], optional = true }
-spin = { path = "target/spin-rs-0.9.2" }
-jpeg-decoder = { path = "target/jpeg-decoder-0.3.0", features = [
-  "platform_independent",
-] }
-libwebp-image = { path = "target/libwebp-image-rs-0.3.0" }
-proc-status = { path = "target/proc-status-0.1.1" }
-textcode = { path = "target/textcode-0.2.2" }
-tinybmp = { path = "target/tinybmp-0.4.0" }
-tl = { path = "target/tl-0.7.7" }
-png = { path = "target/image-png-0.17.5"  }
-bytemuck = { path = "target/bytemuck-1.7.0" }
-exr = { path = "target/exrs-1.5.0" }
-bit_field = { path = "target/rust-bit-field-0.10.1" }
-half = { path = "target/half-rs-1.8.2" }
-lebe = { path = "target/lebe-0.5.2" }
-libwebp = { path = "target/libwebp-rs-0.1.0" }
-libwebp-sys2 = { path = "target/libwebp-sys2-rs-0.1.2" }
-embedded-graphics = { path = "target/embedded-graphics-embedded-graphics-v0.7.1" }
-micromath = { path = "target/micromath-1.1.1" }
-rustls = { path = "target/rustls-v-0.20.8/rustls" }
-webpki-roots = { path = "target/webpki-roots-v-0.22.6" }
-imagesize = { path = "target/imagesize-0.11.0" }
-strict-num = { path = "target/strict-num-0.1.0" }
-cssparser = { path = "target/rust-cssparser-0.28.0" }
-qname = { path = "target/qname-0.1.0" }
-derive_more = { path = "target/derive_more-0.99.17" }
-convert_case = { path = "target/convert_case-0.6.0" }
-slotmap = { path = "target/slotmap-1.0.6" }
-unic-ucd = { path = "target/rust-unic-0.9.0/unic/ucd" }
-jetscii = { path = "target/jetscii-0.5.3" }
-webkit2gtk = { path = "target/webkit2gtk-rs-webkit2gtk-rs-v0.16.0" }
-javascriptcore-rs = { path = "target/javascriptcore-rs-javascriptcore-rs-v0.15.2" }
-javascriptcore-rs-sys = { path = "target/javascriptcore-rs-javascriptcore-rs-v0.15.2/sys" }
-webkit2gtk-sys = { path = "target/webkit2gtk-rs-webkit2gtk-rs-v0.16.0/sys" }
-soup2-sys = { path = "target/soup2-sys-0.2.0" }
-rayon = { path = "target/rayon-1.5.1" }
-hard-xml = { path = "target/hard-xml-v1.19.0/hard-xml" }
-roxmltree = { path = "target/roxmltree-0.18.0" }
-xmlparser = { path = "target/xmlparser-0.13.5" }
-svgtypes = { path = "target/svgtypes-0.10.0" }
-gif = { path = "target/image-gif-0.12.0" }
-weezl = { path = "target/lzw-0.1.5" }
-tiff = { path = "target/image-tiff-0.8.0" }
-selectors = { path = "target/selectors-0.23.0" }
-rusqlite = { path = "target/rusqlite-0.28.0", features = ["bundled"]}
-libsqlite3-sys = { path = "target/rusqlite-0.28.0/libsqlite3-sys" } # 0.17.3
-ring = { path = "target/ring-0.16.20" } 
-sct = { path = "target/sct.rs-v-0.7.0" } 
-opml = { path = "target/opml/opml_api" } 
-usvg = { path = "target/resvg-0.29.0/usvg" }  
-hashlink = { path = "target/hashlink-0.8.0" }
-deflate = { path = "target/deflate-1.0.0" }
-
-
-## not needed 
-# miniz_oxide = { path = "target/miniz_oxide-0.6.2/miniz_oxide" }
-
-
-
