@@ -1,20 +1,0 @@
-pub extern crate feed_rs;
-pub extern crate flume;
-pub extern crate gif;
-pub extern crate ico;
-pub extern crate image;
-pub extern crate jpeg_decoder;
-pub extern crate libwebp_image;
-pub extern crate lz4_compression;
-pub extern crate opml;
-pub extern crate png;
-pub extern crate proc_status;
-pub extern crate rusqlite;
-pub extern crate textcode;
-pub extern crate tinybmp;
-pub extern crate tl;
-pub extern crate ureq;
-pub extern crate url;
-pub extern crate usvg;
-pub extern crate webkit2gtk;
-pub extern crate xmlparser;
