@@ -203,10 +203,7 @@ use std::sync::Once;
 static TEST_SETUP: Once = Once::new();
 fn setup() {
     TEST_SETUP.call_once(|| {
-        let _r = logger_config::setup_fern_logger(
-            // 0,
-            logger_config::QuietFlags::Downloader as u64,
-        );
+        let _r = logger_config::setup_fern_logger(logger_config::QuietFlags::Downloader as u64);
         unzipper::unzip_some();
     });
 }
