@@ -30,6 +30,7 @@ once_cell = "*"       # ">=1.12.0"
 [dev-dependencies]
 rand = ">=0.8.5"
 rusqlite = { version = ">=0.22", features = ["bundled"] }
+fr_core = { path = "../fr_core", features = [] }
 
 
 [package.metadata.i18n]
